fix spacing issues for hero and image dark mode

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,3 +1,3 @@
 .layout {
-  padding-top: var(--page-padding-top);
+  //padding-top: var(--page-padding-top);
 }
