--- a/src/components/Hero/Home/index.module.scss
+++ b/src/components/Hero/Home/index.module.scss
@@ -328,9 +328,20 @@
 }
 
 // Need to fake this padding so that it doesn't mess with the positioning of the rest of the component
+.paddingTopWrapper {
+  background: var(--color-base-0);
+  padding-top: var(--page-padding-top);
+}
+
+.paddingTop {
+  position: relative;
+  height: calc(var(--wrapper-padding-top));
+
+}
+
 .paddingBottom {
   position: relative;
-  background: black;
+  background: var(--color-base-1000);
   margin-top: -1px;
   height: var(--wrapper-padding-bottom);
 }
